--- a/src/app/main/main.component.html
+++ b/src/app/main/main.component.html
@@ -1,3 +1,27 @@
-<p>
-  main works!
-</p>
+<mat-form-field>
+  <mat-label>Country</mat-label>
+  <mat-select (selectionChange)="onCountrySelected($event)">
+    <mat-option *ngFor="let country of countries" [value]="country.code">
+      {{country.name}}
+    </mat-option>
+  </mat-select>
+</mat-form-field>
+
+<mat-form-field>
+  <mat-label>City</mat-label>
+  <mat-select (selectionChange)="onCitySelected($event)">
+    <mat-option *ngFor="let city of cities" [value]="city.city">
+      {{city.city}}
+    </mat-option>
+  </mat-select>
+</mat-form-field>
+
+<mat-form-field>
+  <mat-label>Location</mat-label>
+  <mat-select>
+    <mat-option *ngFor="let location of locations" [value]="location.location">
+      {{location.location}}
+    </mat-option>
+  </mat-select>
+</mat-form-field>
+
