--- a/src/app/main/main.component.html
+++ b/src/app/main/main.component.html
@@ -1,4 +1,4 @@
-<form [formGroup]="pollutionForm" novalidate (ngSubmit)="setLatestPollution(pollutionForm.value)">
+<form [formGroup]="pollutionForm" novalidate (ngSubmit)="setLatestPollution()">
   <mat-form-field>
     <mat-label>Country</mat-label>
     <mat-select (selectionChange)="onCountrySelected($event)" formControlName="country">
@@ -37,6 +37,54 @@
 
   <button mat-stroked-button type="submit">Go!</button>
 </form>
+
+
+
+<table mat-table [dataSource]="latestPollutionGridDataSource" class="mat-elevation-z8">
+
+  <!--- Note that these columns can be defined in any order.
+        The actual rendered columns are set as a property on the row definition" -->
+
+  <ng-container matColumnDef="bc">
+    <th mat-header-cell *matHeaderCellDef> bc </th>
+    <td mat-cell *matCellDef="let element"> {{element.bc.value}} </td>
+  </ng-container>
+
+  <ng-container matColumnDef="co">
+    <th mat-header-cell *matHeaderCellDef> co </th>
+    <td mat-cell *matCellDef="let element"> {{element.co.value}} </td>
+  </ng-container>
+
+  <ng-container matColumnDef="no2">
+    <th mat-header-cell *matHeaderCellDef> no2 </th>
+    <td mat-cell *matCellDef="let element"> {{element.no2.value}} </td>
+  </ng-container>
+
+  <ng-container matColumnDef="o3">
+    <th mat-header-cell *matHeaderCellDef> o3 </th>
+    <td mat-cell *matCellDef="let element"> {{element.o3.value}} </td>
+  </ng-container>
+
+  <ng-container matColumnDef="pm10">
+    <th mat-header-cell *matHeaderCellDef="let element"> pm10 </th>
+    <td mat-cell *matCellDef="let element"> {{element.pm10.value}} </td>
+  </ng-container>
+
+  <ng-container matColumnDef="pm25">
+    <th mat-header-cell *matHeaderCellDef> pm25 </th>
+    <td mat-cell *matCellDef="let element"> {{element.pm25.value}} </td>
+  </ng-container>
+
+  <ng-container matColumnDef="so2">
+    <th mat-header-cell *matHeaderCellDef> so2 </th>
+    <td mat-cell *matCellDef="let element"> {{element.so2.value}} </td>
+  </ng-container>
+
+  <tr mat-header-row *matHeaderRowDef="latestPollutionGridColumns"></tr>
+  <tr mat-row *matRowDef="let row; columns: latestPollutionGridColumns;"></tr>
+</table>
+
+
 
 
 
