--- a/src/app/main/main.component.html
+++ b/src/app/main/main.component.html
@@ -1,90 +1,88 @@
-<form [formGroup]="pollutionForm" novalidate (ngSubmit)="setLatestPollution()">
-  <mat-form-field>
-    <mat-label>Country</mat-label>
-    <mat-select (selectionChange)="onCountrySelected($event)" formControlName="country">
-      <mat-option *ngFor="let country of countries" [value]="country.code">
-        {{country.name}}
-      </mat-option>
-    </mat-select>
-  </mat-form-field>
+<div class="menu-container">  
+  <form  [formGroup]="pollutionForm" novalidate (ngSubmit)="setLatestPollution()">
+    <mat-form-field>
+      <mat-label>Country</mat-label>
+      <mat-select (selectionChange)="onCountrySelected($event)" formControlName="country">
+        <mat-option *ngFor="let country of countries" [value]="country.code">
+          {{country.name}}
+        </mat-option>
+      </mat-select>
+    </mat-form-field>
 
-  <mat-form-field>
-    <mat-label>City</mat-label>
-    <mat-select (selectionChange)="onCitySelected($event)" formControlName="city">
-      <mat-option *ngFor="let city of cities" [value]="city.city">
-        {{city.city}}
-      </mat-option>
-    </mat-select>
-  </mat-form-field>
+    <mat-form-field>
+      <mat-label>City</mat-label>
+      <mat-select (selectionChange)="onCitySelected($event)" formControlName="city">
+        <mat-option *ngFor="let city of cities" [value]="city.city">
+          {{city.city}}
+        </mat-option>
+      </mat-select>
+    </mat-form-field>
 
-  <mat-form-field>
-    <mat-label>Location</mat-label>
-    <mat-select formControlName="location">
-      <mat-option *ngFor="let location of locations" [value]="location.location">
-        {{location.location}}
-      </mat-option>
-    </mat-select>
-  </mat-form-field>
+    <mat-form-field>
+      <mat-label>Location</mat-label>
+      <mat-select formControlName="location">
+        <mat-option *ngFor="let location of locations" [value]="location.location">
+          {{location.location}}
+        </mat-option>
+      </mat-select>
+    </mat-form-field>
 
-  <mat-button-toggle-group #dateGroup="matButtonToggleGroup" formControlName="dateType">
-    <mat-button-toggle value="now" aria-label="Now">
-      Now
-    </mat-button-toggle>
-    <mat-button-toggle value="dateRange" aria-label="Date picker">
-      <mat-icon>date_range</mat-icon>
-    </mat-button-toggle>
-  </mat-button-toggle-group>
+    <mat-button-toggle-group #dateGroup="matButtonToggleGroup" formControlName="dateType">
+      <mat-button-toggle value="now" aria-label="Now">
+        Now
+      </mat-button-toggle>
+      <mat-button-toggle value="dateRange" aria-label="Date picker">
+        <mat-icon>date_range</mat-icon>
+      </mat-button-toggle>
+    </mat-button-toggle-group>
 
-  <button mat-stroked-button type="submit">Go!</button>
-</form>
+    <button mat-stroked-button type="submit">Go!</button>
+  </form>
+</div>
 
+<div class="grid-container">
+  <table  *ngIf="latestPollutionGridDataSource.length > 0" mat-table [dataSource]="latestPollutionGridDataSource" class="mat-elevation-z8">
 
+  
+    <ng-container matColumnDef="bc">
+      <th mat-header-cell *matHeaderCellDef> bc </th>
+      <td mat-cell *matCellDef="let element"> {{element.bc.value}} </td>
+    </ng-container>
 
-<table mat-table [dataSource]="latestPollutionGridDataSource" class="mat-elevation-z8">
+    <ng-container matColumnDef="co">
+      <th mat-header-cell *matHeaderCellDef> co </th>
+      <td mat-cell *matCellDef="let element"> {{element.co.value}} </td>
+    </ng-container>
 
-  <!--- Note that these columns can be defined in any order.
-        The actual rendered columns are set as a property on the row definition" -->
+    <ng-container matColumnDef="no2">
+      <th mat-header-cell *matHeaderCellDef> no2 </th>
+      <td mat-cell *matCellDef="let element"> {{element.no2.value}} </td>
+    </ng-container>
 
-  <ng-container matColumnDef="bc">
-    <th mat-header-cell *matHeaderCellDef> bc </th>
-    <td mat-cell *matCellDef="let element"> {{element.bc.value}} </td>
-  </ng-container>
+    <ng-container matColumnDef="o3">
+      <th mat-header-cell *matHeaderCellDef> o3 </th>
+      <td mat-cell *matCellDef="let element"> {{element.o3.value}} </td>
+    </ng-container>
 
-  <ng-container matColumnDef="co">
-    <th mat-header-cell *matHeaderCellDef> co </th>
-    <td mat-cell *matCellDef="let element"> {{element.co.value}} </td>
-  </ng-container>
+    <ng-container matColumnDef="pm10">
+      <th mat-header-cell *matHeaderCellDef="let element"> pm10 </th>
+      <td mat-cell *matCellDef="let element"> {{element.pm10.value}} </td>
+    </ng-container>
 
-  <ng-container matColumnDef="no2">
-    <th mat-header-cell *matHeaderCellDef> no2 </th>
-    <td mat-cell *matCellDef="let element"> {{element.no2.value}} </td>
-  </ng-container>
+    <ng-container matColumnDef="pm25">
+      <th mat-header-cell *matHeaderCellDef> pm25 </th>
+      <td mat-cell *matCellDef="let element"> {{element.pm25.value}} </td>
+    </ng-container>
 
-  <ng-container matColumnDef="o3">
-    <th mat-header-cell *matHeaderCellDef> o3 </th>
-    <td mat-cell *matCellDef="let element"> {{element.o3.value}} </td>
-  </ng-container>
+    <ng-container matColumnDef="so2">
+      <th mat-header-cell *matHeaderCellDef> so2 </th>
+      <td mat-cell *matCellDef="let element"> {{element.so2.value}} </td>
+    </ng-container>
 
-  <ng-container matColumnDef="pm10">
-    <th mat-header-cell *matHeaderCellDef="let element"> pm10 </th>
-    <td mat-cell *matCellDef="let element"> {{element.pm10.value}} </td>
-  </ng-container>
-
-  <ng-container matColumnDef="pm25">
-    <th mat-header-cell *matHeaderCellDef> pm25 </th>
-    <td mat-cell *matCellDef="let element"> {{element.pm25.value}} </td>
-  </ng-container>
-
-  <ng-container matColumnDef="so2">
-    <th mat-header-cell *matHeaderCellDef> so2 </th>
-    <td mat-cell *matCellDef="let element"> {{element.so2.value}} </td>
-  </ng-container>
-
-  <tr mat-header-row *matHeaderRowDef="latestPollutionGridColumns"></tr>
-  <tr mat-row *matRowDef="let row; columns: latestPollutionGridColumns;"></tr>
-</table>
-
-
+    <tr mat-header-row *matHeaderRowDef="latestPollutionGridColumns"></tr>
+    <tr mat-row *matRowDef="let row; columns: latestPollutionGridColumns;"></tr>
+  </table>
+</div>
 
 
 
