--- a/src/app/main/main.component.scss
+++ b/src/app/main/main.component.scss
@@ -1,3 +1,13 @@
-table {
-  width: 100%;
+
+
+.menu-container {
+  display: flex;
+  justify-content: center;
+  
 }
+
+.grid-container {
+  display: flex;
+  justify-content: center;
+}
+
