lates measurements grid, grid service and more

--- a/src/app/main/main.component.html
+++ b/src/app/main/main.component.html
@@ -1,5 +1,5 @@
 <div class="menu-container">  
-  <form  [formGroup]="pollutionForm" novalidate (ngSubmit)="setLatestPollution()">
+  <form  [formGroup]="pollutionForm" novalidate (ngSubmit)="onGoClick()">
     <mat-form-field>
       <mat-label>Country</mat-label>
       <mat-select (selectionChange)="onCountrySelected($event)" formControlName="country">
@@ -42,41 +42,44 @@
 
 <div class="grid-container">
   <table  *ngIf="latestPollutionGridDataSource.length > 0" mat-table [dataSource]="latestPollutionGridDataSource" class="mat-elevation-z8">
-
+    <ng-container matColumnDef="date">
+      <th mat-header-cell *matHeaderCellDef> date </th>
+      <td mat-cell *matCellDef="let element"> {{element.date ? element.date.toLocaleString() : null}} </td>
+    </ng-container>
   
     <ng-container matColumnDef="bc">
       <th mat-header-cell *matHeaderCellDef> bc </th>
-      <td mat-cell *matCellDef="let element"> {{element.bc.value}} </td>
+      <td mat-cell *matCellDef="let element"> {{element.bc ? element.bc.getValue(2) : null}} </td>
     </ng-container>
 
     <ng-container matColumnDef="co">
       <th mat-header-cell *matHeaderCellDef> co </th>
-      <td mat-cell *matCellDef="let element"> {{element.co.value}} </td>
+      <td mat-cell *matCellDef="let element"> {{element.co ? element.co.getValue(2) : null}} </td>
     </ng-container>
 
     <ng-container matColumnDef="no2">
       <th mat-header-cell *matHeaderCellDef> no2 </th>
-      <td mat-cell *matCellDef="let element"> {{element.no2.value}} </td>
+      <td mat-cell *matCellDef="let element"> {{element.no2 ? element.no2.getValue(2) : null}} </td>
     </ng-container>
 
     <ng-container matColumnDef="o3">
       <th mat-header-cell *matHeaderCellDef> o3 </th>
-      <td mat-cell *matCellDef="let element"> {{element.o3.value}} </td>
+      <td mat-cell *matCellDef="let element"> {{element.o3 ? element.o3.getValue(2) : null}} </td>
     </ng-container>
 
     <ng-container matColumnDef="pm10">
       <th mat-header-cell *matHeaderCellDef="let element"> pm10 </th>
-      <td mat-cell *matCellDef="let element"> {{element.pm10.value}} </td>
+      <td mat-cell *matCellDef="let element"> {{element.pm10 ? element.pm10.getValue(2) : null}} </td>
     </ng-container>
 
     <ng-container matColumnDef="pm25">
       <th mat-header-cell *matHeaderCellDef> pm25 </th>
-      <td mat-cell *matCellDef="let element"> {{element.pm25.value}} </td>
+      <td mat-cell *matCellDef="let element"> {{element.pm25 ? element.pm25.getValue(2) : null}} </td>
     </ng-container>
 
     <ng-container matColumnDef="so2">
       <th mat-header-cell *matHeaderCellDef> so2 </th>
-      <td mat-cell *matCellDef="let element"> {{element.so2.value}} </td>
+      <td mat-cell *matCellDef="let element"> {{element.so2 ? element.so2.getValue(2) : null}} </td>
     </ng-container>
 
     <tr mat-header-row *matHeaderRowDef="latestPollutionGridColumns"></tr>
@@ -85,4 +88,51 @@
 </div>
 
 
+<div class="grid-container">
+  <table  *ngIf="measurementGridDataSource.length > 0" mat-table [dataSource]="measurementGridDataSource" class="mat-elevation-z8">
+
+    <ng-container matColumnDef="date">
+      <th mat-header-cell *matHeaderCellDef> Date </th>
+      <td mat-cell *matCellDef="let element"> {{element.date ? element.date.toLocaleString() : null}} </td>
+    </ng-container>
+  
+    <ng-container matColumnDef="bc">
+      <th mat-header-cell *matHeaderCellDef> bc </th>
+      <td mat-cell *matCellDef="let element"> {{element.bc ? element.bc.getValue(2) : null}} </td>
+    </ng-container>
+
+    <ng-container matColumnDef="co">
+      <th mat-header-cell *matHeaderCellDef> co </th>
+      <td mat-cell *matCellDef="let element"> {{element.co ? element.co.getValue(2) : null}} </td>
+    </ng-container>
+
+    <ng-container matColumnDef="no2">
+      <th mat-header-cell *matHeaderCellDef> no2 </th>
+      <td mat-cell *matCellDef="let element"> {{element.no2 ? element.no2.getValue(2) : null}} </td>
+    </ng-container>
+
+    <ng-container matColumnDef="o3">
+      <th mat-header-cell *matHeaderCellDef> o3 </th>
+      <td mat-cell *matCellDef="let element"> {{element.o3 ? element.o3.getValue(2) : null}} </td>
+    </ng-container>
+
+    <ng-container matColumnDef="pm10">
+      <th mat-header-cell *matHeaderCellDef="let element"> pm10 </th>
+      <td mat-cell *matCellDef="let element"> {{element.pm10 ? element.pm10.getValue(2) : null}} </td>
+    </ng-container>
+
+    <ng-container matColumnDef="pm25">
+      <th mat-header-cell *matHeaderCellDef> pm25 </th>
+      <td mat-cell *matCellDef="let element"> {{element.pm25 ? element.pm25.getValue(2) : null}} </td>
+    </ng-container>
+
+    <ng-container matColumnDef="so2">
+      <th mat-header-cell *matHeaderCellDef> so2 </th>
+      <td mat-cell *matCellDef="let element"> {{element.so2 ? element.so2.getValue(2) : null}} </td>
+    </ng-container>
+
+    <tr mat-header-row *matHeaderRowDef="measurementGridGridColumns"></tr>
+    <tr mat-row *matRowDef="let row; columns: measurementGridGridColumns;"></tr>
+  </table>
+</div>
 
