--- a/src/app/main/main.component.html
+++ b/src/app/main/main.component.html
@@ -1,138 +1,140 @@
-<div class="menu-container">  
-  <form  [formGroup]="pollutionForm" novalidate (ngSubmit)="onGoClick()">
-    <mat-form-field>
-      <mat-label>Country</mat-label>
-      <mat-select (selectionChange)="onCountrySelected($event)" formControlName="country">
-        <mat-option *ngFor="let country of countries" [value]="country.code">
-          {{country.name}}
-        </mat-option>
-      </mat-select>
-    </mat-form-field>
+<div class="wrapper">
+  <div class="menu-container">  
+    <form [formGroup]="pollutionForm" novalidate (ngSubmit)="onGoClick()">
+      <mat-form-field class="menu-item country-item" >
+        <mat-label>Country</mat-label>
+        <mat-select (selectionChange)="onCountrySelected($event)" formControlName="country">
+          <mat-option *ngFor="let country of countries" [value]="country.code">
+            {{country.name}}
+          </mat-option>
+        </mat-select>
+      </mat-form-field>
 
-    <mat-form-field>
-      <mat-label>City</mat-label>
-      <mat-select (selectionChange)="onCitySelected($event)" formControlName="city">
-        <mat-option *ngFor="let city of cities" [value]="city.city">
-          {{city.city}}
-        </mat-option>
-      </mat-select>
-    </mat-form-field>
+      <mat-form-field class="menu-item city-item" >
+        <mat-label>City</mat-label>
+        <mat-select (selectionChange)="onCitySelected($event)" formControlName="city">
+          <mat-option *ngFor="let city of cities" [value]="city.city">
+            {{city.city}}
+          </mat-option>
+        </mat-select>
+      </mat-form-field>
 
-    <mat-form-field>
-      <mat-label>Location</mat-label>
-      <mat-select formControlName="location">
-        <mat-option *ngFor="let location of locations" [value]="location.location">
-          {{location.location}}
-        </mat-option>
-      </mat-select>
-    </mat-form-field>
+      <mat-form-field class="menu-item location-item" >
+        <mat-label>Location</mat-label>
+        <mat-select formControlName="location">
+          <mat-option *ngFor="let location of locations" [value]="location.location">
+            {{location.location}}
+          </mat-option>
+        </mat-select>
+      </mat-form-field>
 
-    <mat-button-toggle-group #dateGroup="matButtonToggleGroup" formControlName="dateType">
-      <mat-button-toggle value="now" aria-label="Now">
-        Now
-      </mat-button-toggle>
-      <mat-button-toggle value="dateRange" aria-label="Date picker">
-        <mat-icon>date_range</mat-icon>
-      </mat-button-toggle>
-    </mat-button-toggle-group>
+      <mat-button-toggle-group class="menu-item time-item" #dateGroup="matButtonToggleGroup" formControlName="dateType">
+        <mat-button-toggle value="now" aria-label="Now">
+          Now
+        </mat-button-toggle>
+        <mat-button-toggle value="dateRange" aria-label="Date picker">
+          <mat-icon>date_range</mat-icon>
+        </mat-button-toggle>
+      </mat-button-toggle-group>
 
-    <button mat-stroked-button type="submit">Go!</button>
-  </form>
-</div>
+      <button mat-stroked-button type="submit" class="menu-item go-button-item">Go!</button>
+    </form>
+  </div>
 
-<div class="grid-container">
-  <table  *ngIf="latestPollutionGridDataSource.length > 0" mat-table [dataSource]="latestPollutionGridDataSource" class="mat-elevation-z8">
-    <ng-container matColumnDef="{{dateColumn}}">
-      <th mat-header-cell *matHeaderCellDef> date </th>
-      <td mat-cell *matCellDef="let element"> {{element.date ? element.date.toLocaleString() : null}} </td>
-    </ng-container>
-  
-    <ng-container matColumnDef="{{bcColumn}}">
-      <th mat-header-cell *matHeaderCellDef> bc </th>
-      <td mat-cell *matCellDef="let element"> {{element.bc ? element.bc.getValue(2) : null}} </td>
-    </ng-container>
+  <div class="grid-container">
+    <table  *ngIf="latestPollutionGridDataSource.length > 0" mat-table [dataSource]="latestPollutionGridDataSource" class="mat-elevation-z8">
+      <ng-container matColumnDef="{{dateColumn}}">
+        <th mat-header-cell *matHeaderCellDef> date </th>
+        <td mat-cell *matCellDef="let element"> {{element.date ? element.date.toLocaleString() : null}} </td>
+      </ng-container>
+    
+      <ng-container matColumnDef="{{bcColumn}}">
+        <th mat-header-cell *matHeaderCellDef> bc </th>
+        <td mat-cell *matCellDef="let element"> {{element.bc ? element.bc.getValue(2) : null}} </td>
+      </ng-container>
 
-    <ng-container matColumnDef="{{coColumn}}">
-      <th mat-header-cell *matHeaderCellDef> co </th>
-      <td mat-cell *matCellDef="let element"> {{element.co ? element.co.getValue(2) : null}} </td>
-    </ng-container>
+      <ng-container matColumnDef="{{coColumn}}">
+        <th mat-header-cell *matHeaderCellDef> co </th>
+        <td mat-cell *matCellDef="let element"> {{element.co ? element.co.getValue(2) : null}} </td>
+      </ng-container>
 
-    <ng-container matColumnDef="{{no2Column}}">
-      <th mat-header-cell *matHeaderCellDef> no2 </th>
-      <td mat-cell *matCellDef="let element"> {{element.no2 ? element.no2.getValue(2) : null}} </td>
-    </ng-container>
+      <ng-container matColumnDef="{{no2Column}}">
+        <th mat-header-cell *matHeaderCellDef> no2 </th>
+        <td mat-cell *matCellDef="let element"> {{element.no2 ? element.no2.getValue(2) : null}} </td>
+      </ng-container>
 
-    <ng-container matColumnDef="{{o3Column}}">
-      <th mat-header-cell *matHeaderCellDef> o3 </th>
-      <td mat-cell *matCellDef="let element"> {{element.o3 ? element.o3.getValue(2) : null}} </td>
-    </ng-container>
+      <ng-container matColumnDef="{{o3Column}}">
+        <th mat-header-cell *matHeaderCellDef> o3 </th>
+        <td mat-cell *matCellDef="let element"> {{element.o3 ? element.o3.getValue(2) : null}} </td>
+      </ng-container>
 
-    <ng-container matColumnDef="{{pm10Column}}">
-      <th mat-header-cell *matHeaderCellDef="let element"> pm10 </th>
-      <td mat-cell *matCellDef="let element"> {{element.pm10 ? element.pm10.getValue(2) : null}} </td>
-    </ng-container>
+      <ng-container matColumnDef="{{pm10Column}}">
+        <th mat-header-cell *matHeaderCellDef="let element"> pm10 </th>
+        <td mat-cell *matCellDef="let element"> {{element.pm10 ? element.pm10.getValue(2) : null}} </td>
+      </ng-container>
 
-    <ng-container matColumnDef="{{pm25Column}}">
-      <th mat-header-cell *matHeaderCellDef> pm25 </th>
-      <td mat-cell *matCellDef="let element"> {{element.pm25 ? element.pm25.getValue(2) : null}} </td>
-    </ng-container>
+      <ng-container matColumnDef="{{pm25Column}}">
+        <th mat-header-cell *matHeaderCellDef> pm25 </th>
+        <td mat-cell *matCellDef="let element"> {{element.pm25 ? element.pm25.getValue(2) : null}} </td>
+      </ng-container>
 
-    <ng-container matColumnDef="{{so2Column}}">
-      <th mat-header-cell *matHeaderCellDef> so2 </th>
-      <td mat-cell *matCellDef="let element"> {{element.so2 ? element.so2.getValue(2) : null}} </td>
-    </ng-container>
+      <ng-container matColumnDef="{{so2Column}}">
+        <th mat-header-cell *matHeaderCellDef> so2 </th>
+        <td mat-cell *matCellDef="let element"> {{element.so2 ? element.so2.getValue(2) : null}} </td>
+      </ng-container>
 
-    <tr mat-header-row *matHeaderRowDef="latestPollutionGridColumns"></tr>
-    <tr mat-row *matRowDef="let row; columns: latestPollutionGridColumns;"></tr>
-  </table>
-</div>
+      <tr mat-header-row *matHeaderRowDef="latestPollutionGridColumns"></tr>
+      <tr mat-row *matRowDef="let row; columns: latestPollutionGridColumns;"></tr>
+    </table>
+  </div>
 
 
-<div class="grid-container">
-  <table  *ngIf="measurementGridDataSource.length > 0" mat-table [dataSource]="measurementGridDataSource" class="mat-elevation-z8">
+  <div class="grid-container">
+    <table  *ngIf="measurementGridDataSource.length > 0" mat-table [dataSource]="measurementGridDataSource" class="mat-elevation-z8">
 
-    <ng-container matColumnDef="{{dateColumn}}">
-      <th mat-header-cell *matHeaderCellDef> Date </th>
-      <td mat-cell *matCellDef="let element"> {{element.date ? element.date.toLocaleString() : null}} </td>
-    </ng-container>
-  
-    <ng-container matColumnDef="{{bcColumn}}">
-      <th mat-header-cell *matHeaderCellDef> bc </th>
-      <td mat-cell *matCellDef="let element"> {{element.bc ? element.bc.getValue(2) : null}} </td>
-    </ng-container>
+      <ng-container matColumnDef="{{dateColumn}}">
+        <th mat-header-cell *matHeaderCellDef> Date </th>
+        <td mat-cell *matCellDef="let element"> {{element.date ? element.date.toLocaleString() : null}} </td>
+      </ng-container>
+    
+      <ng-container matColumnDef="{{bcColumn}}">
+        <th mat-header-cell *matHeaderCellDef> bc </th>
+        <td mat-cell *matCellDef="let element"> {{element.bc ? element.bc.getValue(2) : null}} </td>
+      </ng-container>
 
-    <ng-container matColumnDef="{{coColumn}}">
-      <th mat-header-cell *matHeaderCellDef> co </th>
-      <td mat-cell *matCellDef="let element"> {{element.co ? element.co.getValue(2) : null}} </td>
-    </ng-container>
+      <ng-container matColumnDef="{{coColumn}}">
+        <th mat-header-cell *matHeaderCellDef> co </th>
+        <td mat-cell *matCellDef="let element"> {{element.co ? element.co.getValue(2) : null}} </td>
+      </ng-container>
 
-    <ng-container matColumnDef="{{no2Column}}">
-      <th mat-header-cell *matHeaderCellDef> no2 </th>
-      <td mat-cell *matCellDef="let element"> {{element.no2 ? element.no2.getValue(2) : null}} </td>
-    </ng-container>
+      <ng-container matColumnDef="{{no2Column}}">
+        <th mat-header-cell *matHeaderCellDef> no2 </th>
+        <td mat-cell *matCellDef="let element"> {{element.no2 ? element.no2.getValue(2) : null}} </td>
+      </ng-container>
 
-    <ng-container matColumnDef="{{o3Column}}">
-      <th mat-header-cell *matHeaderCellDef> o3 </th>
-      <td mat-cell *matCellDef="let element"> {{element.o3 ? element.o3.getValue(2) : null}} </td>
-    </ng-container>
+      <ng-container matColumnDef="{{o3Column}}">
+        <th mat-header-cell *matHeaderCellDef> o3 </th>
+        <td mat-cell *matCellDef="let element"> {{element.o3 ? element.o3.getValue(2) : null}} </td>
+      </ng-container>
 
-    <ng-container matColumnDef="{{pm10Column}}">
-      <th mat-header-cell *matHeaderCellDef="let element"> pm10 </th>
-      <td mat-cell *matCellDef="let element"> {{element.pm10 ? element.pm10.getValue(2) : null}} </td>
-    </ng-container>
+      <ng-container matColumnDef="{{pm10Column}}">
+        <th mat-header-cell *matHeaderCellDef="let element"> pm10 </th>
+        <td mat-cell *matCellDef="let element"> {{element.pm10 ? element.pm10.getValue(2) : null}} </td>
+      </ng-container>
 
-    <ng-container matColumnDef="{{pm25Column}}">
-      <th mat-header-cell *matHeaderCellDef> pm25 </th>
-      <td mat-cell *matCellDef="let element"> {{element.pm25 ? element.pm25.getValue(2) : null}} </td>
-    </ng-container>
+      <ng-container matColumnDef="{{pm25Column}}">
+        <th mat-header-cell *matHeaderCellDef> pm25 </th>
+        <td mat-cell *matCellDef="let element"> {{element.pm25 ? element.pm25.getValue(2) : null}} </td>
+      </ng-container>
 
-    <ng-container matColumnDef="{{so2Column}}">
-      <th mat-header-cell *matHeaderCellDef> so2 </th>
-      <td mat-cell *matCellDef="let element"> {{element.so2 ? element.so2.getValue(2) : null}} </td>
-    </ng-container>
+      <ng-container matColumnDef="{{so2Column}}">
+        <th mat-header-cell *matHeaderCellDef> so2 </th>
+        <td mat-cell *matCellDef="let element"> {{element.so2 ? element.so2.getValue(2) : null}} </td>
+      </ng-container>
 
-    <tr mat-header-row *matHeaderRowDef="measurementGridGridColumns"></tr>
-    <tr mat-row *matRowDef="let row; columns: measurementGridGridColumns;"></tr>
-  </table>
+      <tr mat-header-row *matHeaderRowDef="measurementGridGridColumns"></tr>
+      <tr mat-row *matRowDef="let row; columns: measurementGridGridColumns;"></tr>
+    </table>
+  </div>
 </div>
 
