--- a/src/app/main/main.component.html
+++ b/src/app/main/main.component.html
@@ -44,8 +44,8 @@
   <div class="grid-container">
     <table  *ngIf="latestPollutionGridDataSource.length > 0" mat-table [dataSource]="latestPollutionGridDataSource" class="mat-elevation-z8">
       <ng-container matColumnDef="{{dateColumn}}">
-        <th mat-header-cell *matHeaderCellDef> date </th>
-        <td mat-cell *matCellDef="let element"> {{element.date ? element.date.toLocaleString() : null}} </td>
+        <th mat-header-cell *matHeaderCellDef> Date </th>
+        <td mat-cell *matCellDef="let element"> {{element.getLocaleDateTime()}} </td>
       </ng-container>
     
       <ng-container matColumnDef="{{bcColumn}}">
@@ -69,7 +69,7 @@
       </ng-container>
 
       <ng-container matColumnDef="{{pm10Column}}">
-        <th mat-header-cell *matHeaderCellDef="let element"> pm10 </th>
+        <th mat-header-cell *matHeaderCellDef> pm10 </th>
         <td mat-cell *matCellDef="let element"> {{element.pm10 ? element.pm10.getValue(2) : null}} </td>
       </ng-container>
 
@@ -86,15 +86,13 @@
       <tr mat-header-row *matHeaderRowDef="latestPollutionGridColumns"></tr>
       <tr mat-row *matRowDef="let row; columns: latestPollutionGridColumns;"></tr>
     </table>
-  </div>
 
+    <p *ngIf="measurementGridDataSource.length > 0"> Warning (todo) </p>
 
-  <div class="grid-container">
     <table  *ngIf="measurementGridDataSource.length > 0" mat-table [dataSource]="measurementGridDataSource" class="mat-elevation-z8">
-
       <ng-container matColumnDef="{{dateColumn}}">
         <th mat-header-cell *matHeaderCellDef> Date </th>
-        <td mat-cell *matCellDef="let element"> {{element.date ? element.date.toLocaleString() : null}} </td>
+        <td mat-cell *matCellDef="let element"> {{element.getLocaleDateTime()}} </td>
       </ng-container>
     
       <ng-container matColumnDef="{{bcColumn}}">
@@ -118,7 +116,7 @@
       </ng-container>
 
       <ng-container matColumnDef="{{pm10Column}}">
-        <th mat-header-cell *matHeaderCellDef="let element"> pm10 </th>
+        <th mat-header-cell *matHeaderCellDef> pm10 </th>
         <td mat-cell *matCellDef="let element"> {{element.pm10 ? element.pm10.getValue(2) : null}} </td>
       </ng-container>
 
