--- a/src/app/main/main.component.html
+++ b/src/app/main/main.component.html
@@ -50,44 +50,48 @@
     
       <ng-container matColumnDef="{{bcColumn}}">
         <th mat-header-cell *matHeaderCellDef> bc </th>
-        <td mat-cell *matCellDef="let element"> {{element.bc ? element.bc.getValue(2) : null}} </td>
+        <td mat-cell *matCellDef="let element"> {{element.bc ? element.bc.getStringValue(2) : null}} </td>
       </ng-container>
 
       <ng-container matColumnDef="{{coColumn}}">
         <th mat-header-cell *matHeaderCellDef> co </th>
-        <td mat-cell *matCellDef="let element"> {{element.co ? element.co.getValue(2) : null}} </td>
+        <td mat-cell *matCellDef="let element"> {{element.co ? element.co.getStringValue(2) : null}} </td>
       </ng-container>
 
       <ng-container matColumnDef="{{no2Column}}">
         <th mat-header-cell *matHeaderCellDef> no2 </th>
-        <td mat-cell *matCellDef="let element"> {{element.no2 ? element.no2.getValue(2) : null}} </td>
+        <td mat-cell *matCellDef="let element"> {{element.no2 ? element.no2.getStringValue(2) : null}} </td>
       </ng-container>
 
       <ng-container matColumnDef="{{o3Column}}">
         <th mat-header-cell *matHeaderCellDef> o3 </th>
-        <td mat-cell *matCellDef="let element"> {{element.o3 ? element.o3.getValue(2) : null}} </td>
+        <td mat-cell *matCellDef="let element"> {{element.o3 ? element.o3.getStringValue(2) : null}} </td>
       </ng-container>
 
       <ng-container matColumnDef="{{pm10Column}}">
         <th mat-header-cell *matHeaderCellDef> pm10 </th>
-        <td mat-cell *matCellDef="let element"> {{element.pm10 ? element.pm10.getValue(2) : null}} </td>
+        <td mat-cell *matCellDef="let element"> {{element.pm10 ? element.pm10.getStringValue(2) : null}} </td>
       </ng-container>
 
       <ng-container matColumnDef="{{pm25Column}}">
         <th mat-header-cell *matHeaderCellDef> pm25 </th>
-        <td mat-cell *matCellDef="let element"> {{element.pm25 ? element.pm25.getValue(2) : null}} </td>
+        <td mat-cell *matCellDef="let element"> {{element.pm25 ? element.pm25.getStringValue(2) : null}} </td>
       </ng-container>
 
       <ng-container matColumnDef="{{so2Column}}">
         <th mat-header-cell *matHeaderCellDef> so2 </th>
-        <td mat-cell *matCellDef="let element"> {{element.so2 ? element.so2.getValue(2) : null}} </td>
+        <td mat-cell *matCellDef="let element"> {{element.so2 ? element.so2.getStringValue(2) : null}} </td>
       </ng-container>
 
       <tr mat-header-row *matHeaderRowDef="latestPollutionGridColumns"></tr>
       <tr mat-row *matRowDef="let row; columns: latestPollutionGridColumns;"></tr>
     </table>
 
-    <p *ngIf="measurementGridDataSource.length > 0"> Warning (todo) </p>
+    <div *ngIf="measurementGridDataSource.length > 0">  
+
+      <p *ngFor="let item of warnings"> {{item.parameter}}: {{item.warning}} </p>
+
+    </div>
 
     <table  *ngIf="measurementGridDataSource.length > 0" mat-table [dataSource]="measurementGridDataSource" class="mat-elevation-z8">
       <ng-container matColumnDef="{{dateColumn}}">
@@ -97,37 +101,37 @@
     
       <ng-container matColumnDef="{{bcColumn}}">
         <th mat-header-cell *matHeaderCellDef> bc </th>
-        <td mat-cell *matCellDef="let element"> {{element.bc ? element.bc.getValue(2) : null}} </td>
+        <td mat-cell *matCellDef="let element"> {{element.bc ? element.bc.getStringValue(2) : null}} </td>
       </ng-container>
 
       <ng-container matColumnDef="{{coColumn}}">
         <th mat-header-cell *matHeaderCellDef> co </th>
-        <td mat-cell *matCellDef="let element"> {{element.co ? element.co.getValue(2) : null}} </td>
+        <td mat-cell *matCellDef="let element"> {{element.co ? element.co.getStringValue(2) : null}} </td>
       </ng-container>
 
       <ng-container matColumnDef="{{no2Column}}">
         <th mat-header-cell *matHeaderCellDef> no2 </th>
-        <td mat-cell *matCellDef="let element"> {{element.no2 ? element.no2.getValue(2) : null}} </td>
+        <td mat-cell *matCellDef="let element"> {{element.no2 ? element.no2.getStringValue(2) : null}} </td>
       </ng-container>
 
       <ng-container matColumnDef="{{o3Column}}">
         <th mat-header-cell *matHeaderCellDef> o3 </th>
-        <td mat-cell *matCellDef="let element"> {{element.o3 ? element.o3.getValue(2) : null}} </td>
+        <td mat-cell *matCellDef="let element"> {{element.o3 ? element.o3.getStringValue(2) : null}} </td>
       </ng-container>
 
       <ng-container matColumnDef="{{pm10Column}}">
         <th mat-header-cell *matHeaderCellDef> pm10 </th>
-        <td mat-cell *matCellDef="let element"> {{element.pm10 ? element.pm10.getValue(2) : null}} </td>
+        <td mat-cell *matCellDef="let element"> {{element.pm10 ? element.pm10.getStringValue(2) : null}} </td>
       </ng-container>
 
       <ng-container matColumnDef="{{pm25Column}}">
         <th mat-header-cell *matHeaderCellDef> pm25 </th>
-        <td mat-cell *matCellDef="let element"> {{element.pm25 ? element.pm25.getValue(2) : null}} </td>
+        <td mat-cell *matCellDef="let element"> {{element.pm25 ? element.pm25.getStringValue(2) : null}} </td>
       </ng-container>
 
       <ng-container matColumnDef="{{so2Column}}">
         <th mat-header-cell *matHeaderCellDef> so2 </th>
-        <td mat-cell *matCellDef="let element"> {{element.so2 ? element.so2.getValue(2) : null}} </td>
+        <td mat-cell *matCellDef="let element"> {{element.so2 ? element.so2.getStringValue(2) : null}} </td>
       </ng-container>
 
       <tr mat-header-row *matHeaderRowDef="measurementGridGridColumns"></tr>
