--- a/src/app/components/cities/cities.component.scss
+++ b/src/app/components/cities/cities.component.scss
@@ -15,16 +15,10 @@
     flex-wrap: wrap;
 
     .country-item {
-      padding-right: 25px;
-
-      flex: 1 1 50%;
+      flex: 1 1 100%;
     }
 
-    .city-item {
-      flex: 1 1 50%;
-    }
-
-    .location-item {
+    .parameter-item {
       padding-right: 25px;
 
       flex: 1 1 50%;
