--- a/src/app/components/navigation/navigation.component.html
+++ b/src/app/components/navigation/navigation.component.html
@@ -19,7 +19,7 @@
         *ngIf="isHandset$ | async">
         <mat-icon aria-label="Side nav toggle icon">menu</mat-icon>
       </button>
-      <span>air pollutiion app</span>
+      <span>air pollution app</span>
     </mat-toolbar>
     <ng-content></ng-content>
   </mat-sidenav-content>
