navigation css file  to scss file
(cherry picked from commit f322c96845676124b1da57c8f2d10ffe92d43ec0)

--- a/src/app/components/navigation/navigation.component.scss
+++ b/src/app/components/navigation/navigation.component.scss
@@ -4,10 +4,10 @@
 
 .sidenav {
   width: 200px;
-}
 
-.sidenav .mat-toolbar {
-  background: inherit;
+  .mat-toolbar {
+    background: inherit;
+  }
 }
 
 .mat-toolbar.mat-primary {
