nav button name change

--- a/src/app/components/navigation/navigation.component.html
+++ b/src/app/components/navigation/navigation.component.html
@@ -6,7 +6,7 @@
       (click)="handleClick()">
     <mat-toolbar>Menu</mat-toolbar>
     <mat-nav-list>
-      <a mat-list-item routerLink="main" routerLinkActive="active">Current</a>
+      <a mat-list-item routerLink="main" routerLinkActive="active">Locations</a>
       <a mat-list-item routerLink="cities" routerLinkActive="active">Cities</a>
     </mat-nav-list>
   </mat-sidenav>
