--- a/src/app/components/popup/popup.component.html
+++ b/src/app/components/popup/popup.component.html
@@ -1,3 +1,12 @@
-<button mat-button (click)="onNoClick()">X</button>
-<title mat-dialog-title>Siemka</title>
-{{data.parameter}}
+<div class="popup-container">
+  <div class="popup-header">
+    <title mat-dialog-title>{{data.title}}</title>
+    <mat-dialog-actions>
+      <button mat-button mat-dialog-close>X</button>
+    </mat-dialog-actions>
+  </div>
+   
+    {{data.parameter}}
+
+</div>
+
