--- a/src/app/components/popup/popup.component.html
+++ b/src/app/components/popup/popup.component.html
@@ -1,12 +1,62 @@
 <div class="popup-container">
-  <div class="popup-header">
-    <title mat-dialog-title>{{data.title}}</title>
-    <mat-dialog-actions>
-      <button mat-button mat-dialog-close>X</button>
-    </mat-dialog-actions>
-  </div>
-   
-    {{data.parameter}}
+  <mat-dialog-actions class="popup-header">
+    <button mat-button mat-dialog-close>X</button>
+  </mat-dialog-actions>
+
+  <title mat-dialog-title>{{data.title}}</title>
+
+
+  <div>
+    
+    <div *ngIf="data.parameter === 'pm10' || data.parameter === 'pm25'">
+  
+      <p>
+        <strong>Particulates</strong> – also known as atmospheric aerosol particles, atmospheric particulate matter, particulate matter (PM), or suspended particulate matter (SPM) – are microscopic particles of solid or liquid matter suspended in the air. 
+      </p>
+
+      <p>
+        The term aerosol commonly refers to the particulate/air mixture, as opposed to the particulate matter alone. Sources of particulate matter can be natural or anthropogenic.They have impacts on climate and precipitation that adversely affect human health, in addition to direct inhalation. 
+      </p>
+      
+      <p>
+        The effects of inhaling particulate matter that has been widely studied in humans and animals include asthma, lung cancer, respiratory diseases, cardiovascular disease, premature delivery, birth defects, low birth weight, and premature death.
+      </p>
+      
+      <p>
+        Inhalation of PM2.5 – PM10 is associated with elevated risk of adverse pregnancy outcomes, such as low birth weight . Maternal PM2.5 exposure during pregnancy is also associated with high blood pressure in children. Exposure to PM2.5 has been associated with greater reductions in birth weight than exposure to PM10. PM exposure can cause inflammation, oxidative stress, endocrine disruption, and impaired oxygen transport access to the placenta, all of which are mechanisms for heightening the risk of low birth weight. Overall epidemiologic and toxicological evidence suggests that a causal relationship exists between long-term exposures to PM2.5 and developmental outcomes (i.e. low birth weight). However, studies investigating the significance of trimester-specific exposure have proven to be inconclusive, and results of international studies have been inconsistent in drawing associations of prenatal particulate matter exposure and low birth weight. As perinatal outcomes have been associated with lifelong health and exposure to particulate matter is widespread, this issue is of critical public health importance and additional research will be essential to inform public policy on the matter. 
+      </p>
+
+      Source: <a href="https://en.wikipedia.org/wiki/Particulates" target="_blank">Wikipedia</a>
+    </div>
+
+
+
+    <div *ngIf="data.parameter === 'bc'">
+    bc
+
+    </div>
+
+    <div *ngIf="data.parameter === 'no2'">
+    no2
+
+    </div>
+
+    <div *ngIf="data.parameter === 'so2'">
+    so2
+
+    </div>
+
+    <div *ngIf="data.parameter === 'co'">
+    co
+
+    </div>
+
+    <div *ngIf="data.parameter === 'o3'">
+    o3
+
+    </div>
+  <div class="wiki-text">
+
 
 </div>
 
