wiki popup - early version 3

--- a/src/app/components/popup/popup.component.html
+++ b/src/app/components/popup/popup.component.html
@@ -1,3 +1,4 @@
 <button mat-button (click)="onNoClick()">X</button>
-<title mat-dialog-title>Siemka</title>
+<title mat-dialog-title>{{data.title}}</title>
 
+<p id="created-wiki-text"></p>
