--- a/src/app/components/popup/popup.component.html
+++ b/src/app/components/popup/popup.component.html
@@ -4,8 +4,7 @@
   </mat-dialog-actions>
 
   <title mat-dialog-title>{{data.title}}</title>
-
-  
-  <p id="created-wiki-text" class="wiki-paragraph"></p>
+  <p id="created-wiki-text"></p>
+  <a href={{data.wiki.desktopUrl}} target="_blank">Source: Wikipedia. Learn more!</a>
 
 </div>
