--- a/src/app/components/main/main.component.html
+++ b/src/app/components/main/main.component.html
@@ -107,44 +107,44 @@
 
     </div>
 
-    <table *ngIf="measurementGridDataSource.length > 0" mat-table [dataSource]="measurementGridDataSource" class="mat-elevation-z8">
+    <table *ngIf="measurementGridDataSourceAngularMaterial.data.length > 0" mat-table [dataSource]="measurementGridDataSourceAngularMaterial" matSort (matSortChange)="onMatSortChange($event)" matSortDisableClear matSortStart="desc" class="mat-elevation-z8">
       <ng-container matColumnDef="{{dateColumn}}">
-        <th mat-header-cell *matHeaderCellDef> Date </th>
+        <th mat-header-cell *matHeaderCellDef mat-sort-header> Date </th>
         <td mat-cell *matCellDef="let element"> {{element.getLocaleDateTime()}} </td>
       </ng-container>
     
       <ng-container matColumnDef="{{bcColumn}}">
-        <th mat-header-cell *matHeaderCellDef> bc </th>
+        <th mat-header-cell *matHeaderCellDef mat-sort-header> bc </th>
         <td mat-cell *matCellDef="let element"> {{element.bc ? element.bc.getStringValue(2) : null}} </td>
       </ng-container>
 
       <ng-container matColumnDef="{{coColumn}}">
-        <th mat-header-cell *matHeaderCellDef> co </th>
+        <th mat-header-cell *matHeaderCellDef mat-sort-header> co </th>
         <td mat-cell *matCellDef="let element"> {{element.co ? element.co.getStringValue(2) : null}} </td>
       </ng-container>
 
       <ng-container matColumnDef="{{no2Column}}">
-        <th mat-header-cell *matHeaderCellDef> no2 </th>
+        <th mat-header-cell *matHeaderCellDef mat-sort-header> no2 </th>
         <td mat-cell *matCellDef="let element"> {{element.no2 ? element.no2.getStringValue(2) : null}} </td>
       </ng-container>
 
       <ng-container matColumnDef="{{o3Column}}">
-        <th mat-header-cell *matHeaderCellDef> o3 </th>
+        <th mat-header-cell *matHeaderCellDef mat-sort-header> o3 </th>
         <td mat-cell *matCellDef="let element"> {{element.o3 ? element.o3.getStringValue(2) : null}} </td>
       </ng-container>
 
       <ng-container matColumnDef="{{pm10Column}}">
-        <th mat-header-cell *matHeaderCellDef> pm10 </th>
+        <th mat-header-cell *matHeaderCellDef mat-sort-header> pm10 </th>
         <td mat-cell *matCellDef="let element"> {{element.pm10 ? element.pm10.getStringValue(2) : null}} </td>
       </ng-container>
 
       <ng-container matColumnDef="{{pm25Column}}">
-        <th mat-header-cell *matHeaderCellDef> pm25 </th>
+        <th mat-header-cell *matHeaderCellDef mat-sort-header> pm25 </th>
         <td mat-cell *matCellDef="let element"> {{element.pm25 ? element.pm25.getStringValue(2) : null}} </td>
       </ng-container>
 
       <ng-container matColumnDef="{{so2Column}}">
-        <th mat-header-cell *matHeaderCellDef> so2 </th>
+        <th mat-header-cell *matHeaderCellDef mat-sort-header> so2 </th>
         <td mat-cell *matCellDef="let element"> {{element.so2 ? element.so2.getStringValue(2) : null}} </td>
       </ng-container>
 
