--- a/src/app/components/cities/cities.component.html
+++ b/src/app/components/cities/cities.component.html
@@ -2,7 +2,7 @@
   <div class="menu-container">  
     <form [formGroup]="citiesPollutionForm" novalidate (ngSubmit)="onGoClick()">
       <mat-form-field class="country-item" >
-        <mat-label>Country</mat-label>
+        <mat-label>{{"country" | translate}}</mat-label>
         <mat-select formControlName="country">
           <mat-option *ngFor="let country of countries" [value]="country.code">
             {{country.name}}
@@ -11,7 +11,7 @@
       </mat-form-field>
 
       <mat-form-field class="parameter-item">
-        <mat-label>Parameter</mat-label>
+        <mat-label>{{"parameter" | translate}}</mat-label>
         <mat-select formControlName="parameter">
           <mat-option *ngFor="let parameter of PARAMETERS" [value]="parameter">
             {{parameter}}
@@ -21,35 +21,35 @@
 
       <mat-button-toggle-group (change)="onDateToggleChange()" class="time-item" #dateGroup="matButtonToggleGroup" formControlName="dateType">
         <mat-button-toggle value="now" aria-label="Now">
-          Now
+          {{'dateRangeNow' | translate}}
         </mat-button-toggle>
         <mat-button-toggle value="dateRange" aria-label="Date picker">
-          <mat-icon>date_range</mat-icon>
+          {{'dateRangeCalendar' | translate}}
         </mat-button-toggle>
       </mat-button-toggle-group>
 
       <div class="date-pickers" *ngIf="showDatePicker == true">
         <mat-form-field class="picker-from">
-          <input matInput [matDatepicker]="fromDatePicker" placeholder="Choose a date" formControlName="fromDate">
+          <input matInput [matDatepicker]="fromDatePicker" placeholder="{{'chooseDateFrom' | translate}}" formControlName="fromDate">
           <mat-datepicker-toggle matSuffix [for]="fromDatePicker"></mat-datepicker-toggle>
           <mat-datepicker #fromDatePicker></mat-datepicker>
         </mat-form-field>
 
         <mat-form-field class="picker-to">
-          <input matInput [matDatepicker]="toDatePicker" placeholder="Choose a date"  formControlName="toDate">
+          <input matInput [matDatepicker]="toDatePicker" placeholder="{{'chooseDateTo' | translate}}"  formControlName="toDate">
           <mat-datepicker-toggle matSuffix [for]="toDatePicker"></mat-datepicker-toggle>
           <mat-datepicker #toDatePicker></mat-datepicker>
         </mat-form-field>
       </div>
 
-      <button mat-stroked-button type="submit" class="go-button-item">Go!</button>
+      <button mat-stroked-button type="submit" class="go-button-item">{{'goButton' | translate}}</button>
     </form>
   </div>
 
   <div class="grid-container">
     <table *ngIf="measurementGridDataSourceAngularMaterial.data.length > 0" mat-table [dataSource]="measurementGridDataSourceAngularMaterial" matSort (matSortChange)="onMatSortChange($event)" matSortDisableClear matSortStart="desc" class="mat-elevation-z8">
       <ng-container matColumnDef="{{cityColumn}}">
-        <th mat-header-cell *matHeaderCellDef mat-sort-header> City </th>
+        <th mat-header-cell *matHeaderCellDef mat-sort-header> {{'city' | translate}} </th>
         <td mat-cell *matCellDef="let element"> {{element.city}} </td>
       </ng-container>
     
