--- a/src/app/components/pollution-warning/pollution-warning.component.html
+++ b/src/app/components/pollution-warning/pollution-warning.component.html
@@ -1,5 +1,6 @@
 <div  class="warning-container">
   <div>
+    <h3>{{'airMessage' | translate}}</h3>
     <div *ngFor="let item of warnings">
       <p *ngIf="item.warning == 1" class="good mat-body-strong">
         ▶ {{item.parameter}}: {{"messageGood" | translate}}
